# ftml

./: LICENSE  README.md  pyproject.toml
examples/: alpaca.jsonl  alpaca_as_sharegpt.jsonl  chatml.jsonl  openai_chat.jsonl  sharegpt.jsonl  sharegpt_as_openai.jsonl
ftml/: __init__.py  __main__.py  cli.py  converter.py  detector.py  fixer.py  models.py  reporter.py  stats.py  tokenizer.py  validator.py
ftml/formats/: __init__.py  alpaca.py  base.py  chatml.py  csv_format.py  openai_chat.py  sharegpt.py
tests/: conftest.py  test_converter.py  test_detector.py  test_fixer.py  test_formats_alpaca.py  test_formats_chatml.py  test_formats_csv.py  test_formats_openai_chat.py  test_formats_sharegpt.py  test_models.py  test_roundtrip.py  test_stats.py  test_tokenizer.py  test_validator.py
tests/sample_data/: alpaca.jsonl  chatml.jsonl  csv_basic.csv  openai_chat.jsonl  sharegpt.jsonl
