[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ftml"
version = "0.1.0"
description = "The universal format converter and validator for LLM fine-tuning datasets"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "tiktoken>=0.7.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
ftml = "ftml.cli:app"
