[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ftml-cli"
version = "0.1.0"
description = "The universal format converter and validator for LLM fine-tuning datasets"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [{name = "mmoselhy"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["llm", "fine-tuning", "dataset", "converter", "openai", "alpaca", "sharegpt"]
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "tiktoken>=0.7.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
ftml = "ftml.cli:app"
